<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/holder"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/backGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_green_dark">

        <ImageView
            android:id="@+id/check_icon"
            android:layout_width="@dimen/ic_delete"
            android:layout_height="@dimen/ic_delete"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padd_10"
            android:layout_marginRight="@dimen/padd_10"
            android:contentDescription="@string/imageDescription"
            android:src="@drawable/round_check_circle_outline_white_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/padd_10"
            android:layout_marginRight="@dimen/padd_10"
            android:layout_toStartOf="@id/check_icon"
            android:layout_toLeftOf="@id/check_icon"
            android:text="@string/done"
            android:textColor="#fff"
            android:textSize="12sp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/foreGround"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center|start"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/textview2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:text="@string/textview1" />
    </androidx.cardview.widget.CardView>
</FrameLayout>