<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/holder"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/backGround"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@android:color/holo_green_dark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="@+id/check_icon"
            app:layout_constraintTop_toBottomOf="@+id/check_icon">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="38dp"
                android:layout_height="23dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="380dp"
                android:layout_marginRight="380dp"
                android:text="@string/done"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/check_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/check_icon"
                android:layout_width="75dp"
                android:layout_height="63dp"
                android:layout_marginStart="452dp"
                android:layout_marginLeft="452dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/imageDescription"
                android:src="@drawable/round_check_circle_outline_white_24dp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/foreGround"
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="383dp"
                android:layout_height="97dp"
                android:layout_gravity="center_vertical"
                android:gravity="center|start"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/textview2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.016" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="228dp"
                android:layout_height="100dp"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/textview1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <include
                android:id="@+id/expand_event_view"
                layout="@layout/view_holder_event_details"
                android:layout_width="606dp"
                android:layout_height="179dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.683" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</FrameLayout>